<resources>
    <string name="app_name">North ThompsonPizzariaLandingActivity</string>
    <string name="signIn">Sign in / Create Account</string>
    <string name="contactUs">Contact Us</string>
    <string name="deal">Deal of the Week</string>
    <string name="location">Location</string>
    <string name="menu">Menu</string>
    <string name="companyName">North Thompson Pizzeria</string>
    <string name="landingImage">Image</string>
    <string name="logo">Logo</string>
    <string name="title_activity_contact_us">ContactUs</string>

    <string name="backBtn">Back</string>
    <string name="contactTitle">Contact Us</string>
    <string name="phone">Phone</string>
    <string name="email">Email</string>
    <string name="review">Review</string>
    <string name="LogoContentDescription">Company Logo</string>
    <string name="reviewsTitle">Tell Us What you Think!</string>
    <string name="customerReviews">Our Customer Reviews:</string>
    <string name="viewReviews">See Reviews</string>


    <string name="default_menu_text">Pizza</string>
    <string name="back">Back</string>
    <string name="sign_in">Sign In</string>
    <string name="todo">TODO</string>
    <string name="dealTitleText">Deal of the Week!</string>
    <string name="discountTV">15</string>
    <string name="smallCost">Small</string>
    <string name="largeCost">Large</string>
    <string name="mediumCost">Medium</string>
    <string name="dealPizzaNameTV">Name of Pizza</string>
    <string name="percentOffTV">% Off!</string>
    <string name="title_activity_location">location</string>
    <string name="locationET">Enter Your Address</string>
    <string name="customerReviewEtHint">Leave us a Review!</string>
    <string name="reviewSubmitBtn">Submit Review</string>

    <string name="appName">Order_Customization</string>
    <string name="makePizza">Make Your Own Pizza</string>
    <string name="selectPizzaSize">Select Pizza Size</string>
    <string name="checkout">Checkout</string>
    <string name="subtotal">Subtotal:</string>
    <string name="defaultType">Choose Sauce:</string>
    <string name="tomato_sauce">Tomato Sauce</string>
    <string name="alfredo_sauce">Alfredo Sauce</string>
    <string name="choose_meat">Choose Meat:</string>
    <string name="pepperoni">Pepperoni</string>
    <string name="bacon">Bacon</string>
    <string name="italian_sausage">Italian Sausage</string>
    <string name="choose_veggies">Choose Veggies</string>
    <string name="mushrooms">Mushrooms</string>
    <string name="onions">Onions</string>
    <string name="peppers">Peppers</string>
    <string name="tomatoes">Tomatoes</string>
    <string name="default_pizza">Note: all pizzas come with cheese by default.</string>
    <string name="default_pizza_price">$12</string>
    <array name="sizes">
        <item>Small $12</item>
        <item>Medium $14</item>
        <item>Large $16</item>
    </array>

    <string name="nptString">North Thompson Pizzeria</string>
    <string name="create_account_signIN_page">Create Account</string>
    <string name="profileBtnText">Profile</string>
    <string name="menuString">Menu</string>
    <string name="dealsBtnLabel">Deals of the Week</string>
    <string name="signInBtnLabel">Sign In/Create Account</string>
    <string name="locationBtnLabel">Location</string>
    <string name="contactUsBtnLabel">Contact Us</string>
    <string name="backBtnLabel">Back</string>
    <string name="signInString">Sign In</string>
    <string name="usernamePromptString">Username:</string>
    <string name="passwordPromptString">Password:</string>
    <string name="forgotPwdBtnLabel">Forgot Password</string>
    <string name="createAccBtnLabel">Sign In</string>
    <string name="enter_email">Enter Email:</string>
    <string name="sms_info">An SMS verification code will be sent to the phone number associated with your email.</string>
    <string name="reset_password">Reset Password</string>
    <string name="enter_code">Enter Code:</string>
    <string name="create_account">Create Account</string>
    <string name="create_password">Create Password:</string>
    <string name="phone_number">Phone Number:</string>
    <string name="new_password">New Password:</string>
    <string name="retype_password">Retype Password:</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="verify_code">Verify Code</string>
    <string name="menuSignInLabel">Sign In</string>
    <string name="customPizaBtnLabel">Custom Pizza</string>
    <string name="code_input_instruction">Please enter the SMS code sent to you:</string>
    <string name="enter_code_here">Enter code here</string>
    <string name="resend_code">Resend Code</string>
    <string name="phone_hint">+1234567890</string>
    <string name="password_hint">Password must be at least 6 characters long</string>
    <string name="address">Address:</string>
    <string name="name">Name:</string>
    <string name="navCheckout">Checkout</string>
    <string name="create_accountBtn">Create Account</string>
    <string name="profileBtn">Profile</string>
    <string name="menuSubmitOrderBtn">Submit Order</string>
    <string name="payment_method">Payment Method:</string>-->
    <string name="save_changes">Save Changes</string>
    <string name="enter_your_information">Enter your Information:</string>
    <string name="first_name">First Name:</string>
    <string name="last_name">Last Name:</string>
    <string name="continue_to_checkout">Continue to Checkout</string>
    <string name="expiry">Expiry:</string>
    <string name="credit_card">Credit Card #:</string>
    <string name="cvc">CVC:</string>
    <string name="menuSmall">Small</string>
    <string name="menuMedium">Medium</string>
    <string name="menuLarge">Large</string>
    <string name="completeOrder">Complete Order</string>
    <string name="continue_text">Continue</string>

</resources>